--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@tabler/icons-react": "^3.11.0",
+    "clsx": "^2.1.1",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "framer-motion": "^11.3.21",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "react-intersection-observer": "^9.13.0",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.167.1",
+    "typescript": "^5"
   }
 }
